[gd_scene load_steps=26 format=3 uid="uid://cufr5n30dlusn"]

[ext_resource type="Script" path="res://entities/common/player1.gd" id="1_1cxu7"]
[ext_resource type="Texture2D" uid="uid://cgi70rjl1lmwh" path="res://assets/sprites/Character_Combat_Mizuchi.png" id="2_e452u"]
[ext_resource type="AudioStream" uid="uid://c6jadpthyjlx4" path="res://assets/audio/sfx/Boss_Defeated.mp3" id="3_qlfku"]
[ext_resource type="AudioStream" uid="uid://ddbvjpb62b7sy" path="res://assets/audio/sfx/Player_Swipe_Attack.mp3" id="4_blfjs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u0btq"]
atlas = ExtResource("2_e452u")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i8id"]
atlas = ExtResource("2_e452u")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj613"]
atlas = ExtResource("2_e452u")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cxlk"]
atlas = ExtResource("2_e452u")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijss6"]
atlas = ExtResource("2_e452u")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_obn3c"]
atlas = ExtResource("2_e452u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nrcq"]
atlas = ExtResource("2_e452u")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kyq2"]
atlas = ExtResource("2_e452u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3l5d"]
atlas = ExtResource("2_e452u")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rupgo"]
atlas = ExtResource("2_e452u")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7be1"]
atlas = ExtResource("2_e452u")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw1mf"]
atlas = ExtResource("2_e452u")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a67r5"]
atlas = ExtResource("2_e452u")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6xee"]
atlas = ExtResource("2_e452u")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xucv7"]
atlas = ExtResource("2_e452u")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie660"]
atlas = ExtResource("2_e452u")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qkgr"]
atlas = ExtResource("2_e452u")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_npyx8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0btq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i8id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj613")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cxlk")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_ijss6")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obn3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nrcq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kyq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3l5d")
}],
"loop": true,
"name": &"invincible",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rupgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7be1")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw1mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a67r5")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6xee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xucv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie660")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qkgr")
}],
"loop": false,
"name": &"swing",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_il02v"]
radius = 8.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_grwig"]
radius = 40.0
height = 112.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6vh5"]
size = Vector2(288, 200)

[node name="Player1" type="Area2D"]
collision_layer = 2
collision_mask = 133
script = ExtResource("1_1cxu7")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.57628e-07, -44)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_npyx8")
animation = &"invincible"
frame_progress = 0.484289

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_il02v")

[node name="GrazeArea" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 132

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrazeArea"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_grwig")

[node name="SwingCollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwingCollisionArea"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_b6vh5")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="SwingCooldownTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Gun" type="Node2D" parent="."]
position = Vector2(0, -72)

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qlfku")
volume_db = -8.0
pitch_scale = 2.0

[node name="SwingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_blfjs")

[connection signal="area_exited" from="GrazeArea" to="." method="_on_graze_area_area_exited"]
[connection signal="body_exited" from="GrazeArea" to="." method="_on_graze_area_body_exited"]
